# bank-credit

backend/: .gitignore  README.md  main.py  populate.py  pyproject.toml  pytest.ini  requirements.txt  test.db
backend/src/bank_credit/app/: auth.py  crud.py  database.py  email.py  main.py  models.py  password_utils.py  populate.py  schemas.py  utils.py
backend/src/bank_credit/app/routers/: auth.py  credit_request.py  graph.py  notification.py
backend/src/bank_credit/app/views/: __init__.py  auth.py  credit_request.py  routing.py  sla.py  utils.py
backend/src/bank_credit/scripts/: populate.py  serve.py
backend/tests/: conftest.py  test_auth.py  test_credit_requests.py  test_graph.py  test_notifications.py
frontend/: .env  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  App.tsx  api.js  api.ts
frontend/src/__tests__/: CreditRequestsPage.test.jsx  Dashboard.test.jsx  GraphPage.test.jsx  LoginPage.test.jsx  NotificationsPage.test.jsx
frontend/src/api/: fetchData.js
frontend/src/components/: Carousel.css  Carousel.jsx  Loader.jsx  PrivateRoute.jsx  ProtectedRoutesMiddleware.jsx  SiteHeader.css  SiteHeader.jsx
frontend/src/context/: mockdata.tsx
frontend/src/contexts/: AuthContext.jsx  AuthContext.tsx  PreferencesContext.jsx
frontend/src/pages/: CreditRequestsPage.jsx  Dashboard.jsx  FancyHome.css  FancyHome.jsx  GraphPage.jsx  LoginPage.jsx  LoginRegister.css  NotificationsPage.jsx  RegisterPage.jsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: auth.js  (+3 more)
(+26 files in other folders)
