[project]
name = "bank-credit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "email-validator==2.1.0.post1",
    "faker==20.1.0",
    "fastapi==0.104.1",
    "fastapi-mail==1.4.1",
    "httpx==0.25.2",
    "jinja2>=3.1.6",
    "networkx>=3.4.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.scripts]
serve = "bank_credit:main"
populate = "bank_credit.scripts.populate:main"